mysql-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-from-web
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
      - port: 3306
        protocol: TCP
